# BRAINSTools

./: '  .azure_BRAINSTools_common.cmake  .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  .travis_build_script.sh  AGENTS.md  BRAINSTools.cmake  BRAINSTools_common.cmake  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  CTestCustom.cmake  Common.cmake  Dockerfile  NAMICExternalProjects.cmake  NOTICE  README  README.md  RunEdgePrediction.py  SuperBuild.cmake  TODO.txt  Version.cmake  _config.yml  azure-pipelines.yml  azure_dashboard.cmake  circleci.cmake  cpack_brainstools.cmake  groups  index.html  index.md  jenkins_dashboard.cmake  lbl_info.txt  (+5 more)
AutoWorkup/: '  .pep8  AutoWorkup.py  BAWScreenShots.py  BAWantsRegistrationBuildTemplate.py  BRAINSABCext.py  BRAINSCutCMD.py  BRAINSTalairachext.py  CMakeLists.txt  CreateFreeSufereScripts.py  CreateT1OnlyTrackOnFreeSufereScripts.py  DTIPrepext.py  DWIInACPCTest.py  DWIWorkflow.py  DoMiniPigRegistrationPhase1.py  FALSE_CODE.py  PipeLineFunctionHelpers.py  README  README.md  RF12BRAINSCutWrapper.py  RF8BRAINSCutWrapper.py  SessionDB.py  ShortWorkupT1T2.py  SimpleTestNipype.py  Template.config  WorkupT1T2.py  WorkupT1T2.py.bak  WorkupT1T2ANTS.py  WorkupT1T2AtlasNode.py  WorkupT1T2BRAINSCut.py  WorkupT1T2FreeSurfer.py  WorkupT1T2FreeSurfer_custom.py  WorkupT1T2LandmarkInitialization.py  WorkupT1T2PERSISTANCE_CHECK.py  WorkupT1T2Single.py  WorkupT1T2SingleSubjectPhaseII.py  WorkupT1T2TissueClassifiy.py  WorkupT1T2TissueClassify.py  WorkupT1T2_backup.py  __init__.py  (+26 more)
BRAINSABC/: CMakeLists.txt  CTestConfig.cmake  notes.BRAINSABC
BRAINSCommonLib/: ApplicationBase.h  ApplicationBase.hxx  ApplyField.h  ApplyField.hxx  BRAINSCommonLib.cxx  BRAINSCommonLib.h  BRAINSCommonLib.h.in  BRAINSCommonLibConfig.cmake  BRAINSCommonLibConfig.cmake.in  BRAINSCommonLibLauncher.c.in  BRAINSCommonLibWin32Header.h  BRAINSComputeLabels.cxx  BRAINSComputeLabels.h  BRAINSFitBSpline.h  BRAINSFitHelper.cxx  BRAINSFitHelper.h  BRAINSFitHelperTemplate.h  BRAINSFitHelperTemplate.hxx  BRAINSFitSyN.h  BRAINSFitUtils.h  BRAINSIntensityTransform.h  BRAINSMacro.h  BRAINSROIAutoUtils.h  BRAINSThreadControl.cxx  BRAINSThreadControl.h  BRAINSToolsVersion.cxx  BRAINSToolsVersion.h  BRAINSToolsVersionConfig.h.in  BRAINSTypes.h  BRAINSvtkV6Compat.h  CMakeLists.txt  CleanBrainLabelMap.h  ConvertToRigidAffine.h  CreateField.h  CreateField.hxx  CrossOverAffineSystem.h  CrossOverAffineSystem.hxx  DWIMetaDataDictionaryValidator.cxx  DWIMetaDataDictionaryValidator.h  DebugImageViewerClient.h  (+87 more)
BRAINSConstellationDetector/: CMakeLists.txt  CTestConfig.cmake  Copyright.txt  README.md  ReadMe.txt  buildBRAINSConstellationDetector.sh  buildTool.sh
BRAINSContinuousClass/: BRAINSContinuousClass.cxx  BRAINSContinuousClass.xml  CMakeLists.txt  LogisticRegression.cxx  LogisticRegression.h  LogisticRegression.hxx
BRAINSCreateLabelMapFromProbabilityMaps/: BRAINSCreateLabelMapFromProbabilityMaps.cxx  BRAINSCreateLabelMapFromProbabilityMaps.xml  CMakeLists.txt
BRAINSCut/: ASMIRegister.tcl.in  ASTDRegister.tcl.in  ApplyModel.cxx  BRAINSCut.cxx  BRAINSCut.xml  BRAINSCutApplyModel.cxx  BRAINSCutApplyModel.h  BRAINSCutCreateVector.cxx  BRAINSCutCreateVector.h  BRAINSCutDataHandler.cxx  BRAINSCutDataHandler.h  BRAINSCutGenerateProbability.cxx  BRAINSCutGenerateProbability.h  BRAINSCutGenerateRegistrations.cxx  BRAINSCutGenerateRegistrations.h  BRAINSCutPrimary.cxx  BRAINSCutPrimary.h  BRAINSCutTrainModel.cxx  BRAINSCutTrainModel.h  BRAINSCutUtilities.cxx  BRAINSCutUtilities.h  BRAINSCutVectorTrainingSet.cxx  BRAINSCutVectorTrainingSet.h  CMakeLists.txt  CTestConfig.cmake  CTestCustom.ctest  CreateVectors.cxx  DumpBinTrainingVectors.cxx  FeatureInputVector.cxx  FeatureInputVector.cxx.BACKUP.51389.cxx  FeatureInputVector.cxx.REMOTE.51389.cxx  FeatureInputVector.cxx.orig  FeatureInputVector.h  FeatureInputVector.h.orig  GenerateBrainClippedImage.cxx  GenerateBrainClippedImage.xml  GenerateCsfClippedFromClassifiedImage.cxx  GenerateProbability.cxx  GenerateRegistrations.cxx  GenerateSummedGradientImage.cxx  (+35 more)
BRAINSDWICleanup/: BRAINSDWICleanup.cxx  BRAINSDWICleanup.xml  CMakeLists.txt
BRAINSDeface/: BRAINSDeface.cxx  BRAINSDeface.xml  CMakeLists.txt  CombineBSplineWithDisplacement.h  CreateRandomBSpline.h  ITKStyleFilterExample.h  README
BRAINSDemonWarp/: ApplyWarpCLP.cxx  BRAINSDemonWarp.cxx  BRAINSDemonWarp.h  BRAINSDemonWarp.hxx  BRAINSDemonWarp.txx  BRAINSDemonWarp.xml  BRAINSDemonWarpCLP.cxx  BRAINSDemonWarpCommonLib.h.in  BRAINSDemonWarpCommonLibWin32Header.h  BRAINSDemonWarpPrimary.cxx  BRAINSDemonWarpTemplates.cxx  BRAINSDemonWarpTemplates.h  BRAINSDemonWarpTemplates_Vdouble.cxx  BRAINSDemonWarpTemplates_Vfloat.cxx  BRAINSDemonWarpTemplates_Vint.cxx  BRAINSDemonWarpTemplates_Vshort.cxx  BRAINSDemonWarpTemplates_Vuchar.cxx  BRAINSDemonWarpTemplates_Vuint.cxx  BRAINSDemonWarpTemplates_Vushort.cxx  BRAINSDemonWarpTemplates_double.cxx  BRAINSDemonWarpTemplates_float.cxx  BRAINSDemonWarpTemplates_int.cxx  BRAINSDemonWarpTemplates_short.cxx  BRAINSDemonWarpTemplates_uchar.cxx  BRAINSDemonWarpTemplates_uint.cxx  BRAINSDemonWarpTemplates_ushort.cxx  CMakeLists.txt  DemonsPreprocessor.h  DemonsPreprocessor.hxx  DemonsRegistrator.h  DemonsRegistrator.hxx  README  ThirionRegistration.h  ThirionRegistration.hxx  VBRAINSDemonWarp.cxx  VBRAINSDemonWarp.h  VBRAINSDemonWarp.hxx  VBRAINSDemonWarp.txx  VBRAINSDemonWarp.xml  VBRAINSDemonWarpPrimary.cxx  (+33 more)
BRAINSFit/: BRAINSFit.cpp  BRAINSFit.cxx  BRAINSFit.cxx.orig  BRAINSFit.xml  BRAINSFitCommonLib.h.in  BRAINSFitCommonLibLauncher.c.in  BRAINSFitCommonLibWin32Header.h  BRAINSFitEZ.cxx  BRAINSFitEZ.xml  CMakeCPackOptions.cmake.in  CMakeLists.txt  EZBRAINSFit.xml  PerformMetricTest.cxx  PerformMetricTest.xml  README
BRAINSInitializedControlPoints/: BRAINSInitializedControlPoints.cxx  BRAINSInitializedControlPoints.xml  CMakeLists.txt  RunTests.sh  T1.nii.gz.md5
BRAINSLabelStats/: BRAINSLabelStats.cxx  BRAINSLabelStats.xml  CMakeLists.txt
BRAINSMush/: tmp.tcl  (+16 more)
(+3882 files in other folders)
